fixed z-index issue with nav

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -14,4 +14,10 @@ body {
     height: 100%;
     width: 100%;
     position: relative;
+    z-index: 1;
+}
+
+#app {
+    position: relative;
+    height: 100vh;
 }
