--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -10,6 +10,7 @@ $link-color:
 #d505ff;
 $background-color: #dcd5f2;
 $color-black: #000;
+$color-green: #8affd4;
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,900;1,400&display=swap');
 
