--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -9,6 +9,7 @@ nav{
     top: 0;
     left: 0;
     height: 6rem;
+    z-index: 10;
 }
 
 nav ul {
@@ -20,23 +21,27 @@ nav ul {
             &.active{
                 display: flex;
                 position: absolute;
-                left: 0;
-                top: 100%;
+                left: -5rem;
+                top: $nav-height;
                 right: 0;
                 flex-direction: column;
                 width: 100%;
-                z-index: 999;
+                z-index: 11;
                 
                 li{
                     display: block;
                     background-color: $background-color;
                     width: 100%;
                     position: relative;
-                    z-index: 100;
+                    
                     
                 }
-                a{
+                a:link, a:active, a:visited{
                     display: block;
+                    color: $color-black;
+                }
+                a:hover{
+                    color: $color-green;
                 }
 
             }
@@ -46,11 +51,31 @@ nav ul {
             &.active{
                 display: flex;
                 position: absolute;
-                left: 0;
+                left: -5rem;
                 top: 100%;
                 right: 0;
                 flex-direction: column;
+                width: 100%;
+                z-index: 11;
+                
             }
+
+            li{
+                    display: block;
+                    background-color: $background-color;
+                    width: 100%;
+                    position: relative;
+                    
+                    
+                    
+                }
+                a:link, a:active, a:visited{
+                    display: block;
+                    color: $color-black;
+                }
+                a:hover{
+                    color: $color-green;
+                }
     }
     
     
